traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:20: warning: enclosing method posFinale has result type Unit: return value discarded
      return false
      ^Snake:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^Snake:26: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^Snake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^Snake:32: warning: enclosing method posFinale has result type Unit: return value discarded
          return true
          ^Snake:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:35: warning: enclosing method posFinale has result type Unit: return value discarded
      return false
      ^Snake:40: error: value unary_! is not a member of Unit
  while(!posFinale()){
        ^